# template-platform-os

./: .gitignore  .gitlab-ci.yml  .gitmessage  Makefile  Makefile-ext.mk  README.md  backup.mk  br-external.conf  define.mk  defines.mak
.docker/: build_docker_ci_image  get-Jfrog-Artifactory-Cli  merge-request
.github/: ContinuousIntegration-Linux.yml
.gitlab/ci/: bazel.yml  common.yml
br2-scratchOS/: Config.in  external.desc  external.mk
br2-scratchOS/board/common/: cfsboard.user.cfg  u-boot-recovery.sh  users.table.txt
br2-scratchOS/board/common/configs/: config.txt
br2-scratchOS/board/common/images/: ascii-art-120.txt  ascii-art-80.txt
br2-scratchOS/board/common/scripts/: deploy.sh  install_nfs.sh  install_tftp.sh
br2-scratchOS/board/raspberrypi3-64/: boot.cmd  config_3_64bit.txt  genimage-2Go-raspberrypi3-64.cfg  genimage-raspberrypi3-64.cfg  genimage-volatile-rootfs.cfg  post-build.sh  post-image.sh  rpi3-config-64bit.txt  setup-credentials.sh  uboot.env.txt
br2-scratchOS/board/raspberrypi3-64/configs/: busybox.config  cmdline.txt  config_3_64bit.txt  linux.config  uboot.config
br2-scratchOS/board/raspberrypi3-64/configs/kernel-dts/: OV5640-overlay.dts  ov5640.dts
br2-scratchOS/board/raspberrypi3-64/rootfs-overlay/etc/: fstab
br2-scratchOS/board/raspberrypi3-64/rootfs-overlay/root/: nfs_mount.sh
br2-scratchOS/board/raspberrypi3-64/scripts/: tweak.sh
br2-scratchOS/buildroot-patches/: 0003-apr.patch  package-rauc-hawkbit-updater-new-package.diff
br2-scratchOS/configs/: raspberrypi3_64_defconfig
br2-scratchOS/configs/wip/: rpi4_defconfig
br2-scratchOS/package/: Config.in
br2-scratchOS/package/applications/cppbdd101/: CMakeLists.txt  LICENSE  NOTICE.txt  README.md
br2-scratchOS/package/applications/hello-autotools/: Config.in  hello-autotools.hash  hello-autotools.mk
br2-scratchOS/package/applications/hello-cmake/: Config.in  hello-autotools.hash  hello-autotools.mk
br2-scratchOS/package/applications/hello-makefile/: Config.in  hello-makefile.hash  hello-makefile.mk
br2-scratchOS/package/applications/src/it/: CMakeLists.txt
br2-scratchOS/package/applications/src/it/cppbdd101/features/step_definitions/: ApplicationSteps.cpp  ApplicationSteps.hpp  DummyTestSteps.cpp  DummyTestSteps.hpp  MockInterfaceContext.cpp  MockInterfaceContext.hpp
br2-scratchOS/package/applications/src/it/project/object/model/features/: 0001-Dummy.feature
br2-scratchOS/package/applications/src/it/project/object/model/features/step_definitions/: DummyTestSteps.cpp  DummyTestSteps.hpp
br2-scratchOS/package/applications/src/main/cpp/: CMakeLists.txt  main.cpp
br2-scratchOS/package/applications/src/main/cpp/cppbdd101/: Application.hpp  Interface.cpp  Logger.cpp
br2-scratchOS/package/applications/src/main/cpp/cppbdd101/google/: Painter.cpp  Painter.hpp  Simple.hpp  Turtle.cpp
br2-scratchOS/package/applications/src/main/cpp/cppbdd101/internal/: LoggerPrivate.cpp  LoggerPrivate.hpp
br2-scratchOS/package/applications/src/main/cpp/project/object/model/: CodingStyle.hpp  Dummy.cpp  Dummy.hpp  DummyPlugin.cpp  DummyPlugin.hpp  NetworkPlugin.cpp  NetworkPlugin.hpp
br2-scratchOS/package/applications/src/main/cpp/project/object/model/launcher/: Application.cpp  Application.hpp  ApplicationPrivate.cpp  ApplicationPrivate.hpp  Channel.cpp  Channel.hpp  ExecutionContext.cpp  ExecutionContext.hpp  Method.cpp  Method.hpp  MethodCaller.cpp  MethodCaller.hpp  OptionDescription.cpp  OptionDescription.hpp  Plugin.cpp  Plugin.hpp  PluginInterface.cpp  PluginInterface.hpp
br2-scratchOS/package/applications/src/main/cpp/project/object/model/log/: CentralizedLogging.cpp  CentralizedLogging.hpp  ColorPatternLayout.cpp  ColorPatternLayout.hpp  ColorStdOuputLogMsg.cpp  ColorStdOuputLogMsg.hpp  LoggingService.cpp  LoggingService.hpp  LoggingServicePrivate.cpp  LoggingServicePrivate.hpp
br2-scratchOS/package/applications/src/main/cpp/project/object/model/utils/: CompilerDetection.hpp  GitRevision.hpp  POM_Export.hpp  Version.cpp  Version.hpp
br2-scratchOS/package/applications/src/test/cpp/: CMakeLists.txt
br2-scratchOS/package/applications/src/test/cpp/cppbdd101/: DummyTest.hpp  InterfaceTest.cpp  MockInterface.cpp  MockInterface.hpp  Test.cpp
br2-scratchOS/package/applications/src/test/cpp/project/object/model/: unitTest.cpp
br2-scratchOS/package/applications/src/test/cpp/project/object/model/extra/: ConfigurableEventListener.cpp  ConfigurableEventListener.hpp  CustomEnvironment.cpp  CustomEnvironment.hpp  GTestEventListener.cpp  GTestEventListener.hpp  Test.cpp  Test.hpp
br2-scratchOS/package/drivers/: Config.in
br2-scratchOS/package/drivers/kernel/chardev/: chardev.c
br2-scratchOS/package/model/: Config.in  model.mk
br2-scratchOS/package/utils/: Config.in
br2-scratchOS/package/utils/atop2/: Config.in  atop2.mk
br2-scratchOS/package/utils/btop/: Config.in  btop.hash  btop.mk
br2-scratchOS/package/utils/cucumber-cpp/: Config.in  cucumber-cpp.hash  cucumber-cpp.mk
br2-scratchOS/package/utils/home-persistence/: Config.in  S30home-persistence-mount  home-persistence-mount.sh  home-persistence.mk  home.mount  root.mount
br2-scratchOS/package/utils/netatop/: Config.in  netatop.hash  netatop.mk
br2-scratchOS/package/utils/persist-partition/: Config.in  mnt-persist.mount  persist-partition.mk
br2-scratchOS/package/utils/ssh-key-persistence/: Config.in  S49ssh-key-persistence  etc-ssh.mount  ssh-key-persistence-config.sh  ssh-key-persistence-mount.sh  ssh-key-persistence.mk  ssh-key-persistence.service
br2-scratchOS/package/utils/ssh-root-password/: Config.in  ssh-root-password.mk  sshd_config
br2-scratchOS/patches/linux/: patch-6.1.46-rt14-rc1.patch
br2-scratchOS/patches/linux-6.1.14/: 0000-linux-6.1.14-fix-rpi-cm4-dt.patch
br2-scratchOS/patches/uboot/: 0001-add-custom-env-rpi.patch
br2-scratchOS/patches/uboot-2022.04/: 0000-uboot-2022.04-fix-rpi-cm4-dt.patch  0001-uboot-2022.04-add-custom-env-rpi-cm4.patch  0002-update_fdt_addr_r_to_increase_kernel_space.patch
buildroot-patches/: 0001-apache-log4cxx.patch  0002-ruby.patch
(+56 files in other folders)
